Fix alignment of navbar on large screens

--- a/src/Components/Utilities/Layout/Navbar/Navbar.css
+++ b/src/Components/Utilities/Layout/Navbar/Navbar.css
@@ -106,4 +106,8 @@
   .NavLinks ul > li {
     margin-right: 35px;
   }
+
+  .Navbar .Navright {
+    margin-left: auto;
+  }
 }
